--- a/services/graph/pkg/service/v0/l10n/locale/en_GB/LC_MESSAGES/graph.po
+++ b/services/graph/pkg/service/v0/l10n/locale/en_GB/LC_MESSAGES/graph.po
@@ -2,21 +2,26 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
+# Translators:
+# Andi Chandler <andi@gowling.com>, 2024
+# 
 #, fuzzy
-msgid   ""
-msgstr  "Project-Id-Version: \n"
-        "Report-Msgid-Bugs-To: EMAIL\n"
-        "POT-Creation-Date: 2024-03-26 15:11+0100\n"
-        "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-        "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-        "Language-Team: LANGUAGE <LL@li.org>\n"
-        "Language: \n"
-        "MIME-Version: 1.0\n"
-        "Content-Type: text/plain; charset=CHARSET\n"
-        "Content-Transfer-Encoding: 8bit\n"
+msgid ""
+msgstr ""
+"Project-Id-Version: \n"
+"Report-Msgid-Bugs-To: EMAIL\n"
+"POT-Creation-Date: 2024-04-13 01:20+0000\n"
+"PO-Revision-Date: 2024-04-04 00:17+0000\n"
+"Last-Translator: Andi Chandler <andi@gowling.com>, 2024\n"
+"Language-Team: English (United Kingdom) (https://app.transifex.com/owncloud-org/teams/6149/en_GB/)\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Language: en_GB\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: pkg/service/v0/spacetemplates.go:29
-msgid   "Here you can add a description for this Space."
-msgstr  ""
-
+#. default description for new spaces
+#: pkg/service/v0/spacetemplates.go:37
+msgid "Here you can add a description for this Space."
+msgstr "Here you can add a description for this Space."
